--- a/blog/package.json
+++ b/blog/package.json
@@ -14,6 +14,7 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf-viewer/search": "^3.12.0",
+    "@vercel/analytics": "^1.3.1",
     "antd": "^5.21.2",
     "framer-motion": "^11.9.0",
     "next": "14.2.14",
