--- a/blog/package.json
+++ b/blog/package.json
@@ -17,10 +17,14 @@
     "@vercel/analytics": "^1.3.1",
     "antd": "^5.21.2",
     "framer-motion": "^11.9.0",
+    "gray-matter": "^4.0.3",
+    "marked": "^14.1.2",
     "next": "14.2.14",
     "raw-loader": "^4.0.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
