--- a/blog/.eslintrc.json
+++ b/blog/.eslintrc.json
@@ -6,6 +6,7 @@
     "@typescript-eslint/ban-ts-comment": "off",
     "typescript.validate.enable": 0,
     "@typescript-eslint/no-unsafe-call": "off",
-    "@typescript-eslint/no-unused-vars":"off"
+    "@typescript-eslint/no-unused-vars":"off",
+    "@typescript-eslint/no-explicit-any":"off"
   }
 }
